Project2/basePackage/main/default/objects/Auction__c/Auction__c.object-meta.xml
<CustomObject>
    <label>Auction</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Auction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>