Project2/basePackage/main/default/objects/Auction__c/fields/Auction_Title__c.field-meta.xml
<CustomField>
    <fullName>Auction_Title__c</fullName>
    <label>Auction Title</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>