Project2/basePackage/main/default/objects/Auction__c/fields/Minimum_Bid__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Bid__c</fullName>
    <label>Minimum Bid</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>