Project2/basePackage/main/default/objects/Auction__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Auctions</relationshipLabel>
    <relationshipName>Auctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>